comlete basic auth/signin

--- a/views/account/signup.hbs
+++ b/views/account/signup.hbs
@@ -12,7 +12,7 @@
     <span class="helper-text" data-error="Введите password"></span>
   </div>
   <div class="input-field">
-    <input id="confirm" type="password" name="password-confirm" class="autocomplete" required>
+    <input id="confirm" type="password" name="confirm" class="autocomplete" required>
     <label for="confirm">password confirm</label>
     <span class="helper-text" data-error="Введите password"></span>
   </div>
